--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ permalink:           pretty
 relative_permalinks: true
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               NavyDish
+tagline:             Life, Startups and People
+url:                 http://divyanshsaini.github.io
 paginate:            1
 baseurl:             ""
 
@@ -20,9 +20,9 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Divyansh Saini
+  url:               https://twitter.com/NavyDish
+  email:             divyanshsaini1@gmail.com
 
 # Custom vars
 version:             2.0.0
